; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_pause_response_status_cb.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_pause_response_status_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@settings_dontcall = common dso_local global i32 0, align 4
@current_pause_parser = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pause_response_status_cb(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @http_parser_pause(i32* %7, i32 1)
  %9 = load i32, i32* @settings_dontcall, align 4
  %10 = load i32*, i32** @current_pause_parser, align 8
  store i32 %9, i32* %10, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @response_status_cb(i32* %11, i8* %12, i64 %13)
  ret i32 %14
}

declare dso_local i32 @http_parser_pause(i32*, i32) #1

declare dso_local i32 @response_status_cb(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
